2011-10-18	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	PR 1917/bsps
	* Makefile.am, console/uarts.c: Modifications to add dynamic tables for
	libchip serial drivers.

2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.68, automake-1.11.1.

2010-12-03	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* bsp_specs, start/start.S, startup/linkcmds.csb337,
	startup/linkcmds.csb637: Use linker command base file.

2010-04-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* Makefile.am, preinstall.am: Added generic interrupt support modules.
	* include/bsp.h: Define BSP_FEATURE_IRQ_EXTENSION.
	* startup/bspstart.c, network/network.c: Interrupt support changes.

2010-04-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* make/custom/csb337.cfg: Use VFP floating point model.

2010-04-25	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* console/fbcons.c: Fix warnings.

2010-04-09	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* startup/bspstart.c, network/network.c: make irq data types
	consistent

2009-12-08	Fernando Nicodemos <fgnicodemos@terra.com.br>

	* console/font8x16.h, console/sed1356.c: Fix typos.

2009-12-04	Fernando Nicodemos <fgnicodemos@terra.com.br>

	* README, README.kit637_v6, console/sed1356_16bit.h, startup/memmap.c:
	Missing parts of previous commit.

2009-11-30	Fernando Nicodemos <fgnicodemos@terra.com.br>

	* Makefile.am, preinstall.am, console/fbcons.c, console/font8x16.h,
	console/sed1356.c, console/uarts.c, include/sed1356.h,
	startup/bspstart.c, startup/linkcmds.csb337, startup/linkcmds.csb637,
	startup/memmap.c, startup/umonsupp.c: Update to match development
	version.

2009-11-21	Fernando Nicodemos <fgnicodemos@terra.com.br>

	* Makefile.am, configure.ac, console/uarts.c: Add initial support for
	Kit637 version of CSB637.
	* README.kit637_v6, make/custom/kit637_v6.cfg: New files.

2009-11-03	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Add RTEMS_BSP_LINKCMDS.